jumbotron removed backgroung colour added

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,4 +10,10 @@ padding-bottom: 250px;
 }
 .float{
   float: left;
+  font-size: 35px;
+  background-color: 	#1E90FF;
+  margin-right: : 150px;
+}
+ol{
+  colour: orange;
 }
