--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ padding-bottom: 250px;
   background-color: 	#1E90FF;
   margin-right: : 150px;
 }
-ol{
-  colour: orange;
+
+p{
+  font-size: 20px;
 }
