--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ padding-top: 50px;
   color: white;
   align-items: center;
   margin-top: 100px;
+  font-size: 40px;
 }
 .float{
   float: left;
@@ -20,7 +21,8 @@ padding-top: 50px;
 }
 
 p{
-  font-size: 20px;
+  font-size: 25px;
+  color: black;
 }
 .ball{
   background-image: url("/home/erick/Documents/project-3/images/M03630-2.jpg");
@@ -33,4 +35,9 @@ ol{
 }
 #number{
   color: #0000CD;
+}
+.enjoy{
+ font-size: 35px;
+ color:		#4682B4	;
+ font-style: italic;
 }
